# claude-web

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  server.py
claude_web/: __init__.py  server.py
claude_web/static/: changelog.json  index.html
claude_web/static/js/: file-tree.js
static/: changelog.json  index.html
static/js/: cwd-history.js  git.js
